src/app.css
@import 'tailwindcss';

@plugin '@tailwindcss/typography';

@theme {
	--font-*: initial;
	--font-sans: Graphik, sans-serif;
	--font-serif: 'Newsreader Variable', serif;
}

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
	*,
	::after,
	::before,
	::backdrop,
	::file-selector-button {
		border-color: var(--color-gray-200, currentColor);
	}

	html {
		@apply bg-linear-to-tr from-indigo-100 to-gray-400 bg-fixed;
	}

	@media screen and (prefers-color-scheme: dark) {
		html {
			@apply bg-linear-to-tr from-gray-700 to-gray-900 bg-fixed;
		}
	}

	.mb-scrollable::-webkit-scrollbar {
		width: 10px;
		margin-left: 20px;
	}

	.mb-scrollable::-webkit-scrollbar-track {
		background: rgba(0, 0, 0, 0.2);
	}

	.mb-scrollable::-webkit-scrollbar-thumb {
		background: rgba(0, 0, 0, 0.8);
		border-radius: 10px;
	}

	.mb-scrollable::-webkit-scrollbar-thumb:hover {
		background: rgba(0, 0, 0, 0.6);
	}
}

.prose h1 {
	font-weight: 600;
}

